tools/tests/errors/surf_lex_14.ki
# LEXER: an f-string with an empty {} placeholder (no expression inside the braces)
var s = f"value is {}"